--- a/src/sass/about.scss
+++ b/src/sass/about.scss
@@ -1,4 +1,130 @@
 .about {
     position: relative;
     margin-top: 100px;
+
+
+    .about-content {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+       
+
+
+        .abaut-box {
+            padding-top: 50px;
+            width: 100%;
+            height: 100%;
+            position: relative;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+
+            .video {
+                width: 100%;
+                height: 100%;
+                position: relative;
+                filter: drop-shadow(0px 4px 25px rgba(0, 185, 182, 0.25));
+                border-radius: 24px;
+    
+            }
+            .nums-box {
+                width: 100%;
+                height: 100%;
+                position: relative;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                padding-left: 95px;
+
+    
+                .nums {
+                    width: 100%;
+                    height: 100%;
+                    position: relative;
+                    h1 {
+                        font-family: 'Inter';
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 48px;
+                        line-height: 120%;
+                        color: #FFA800;
+                    }
+    
+                    p {
+                        font-family: 'Inter';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 18px;
+                        line-height: 140%;
+                        color: #0E0E0F;
+                    }
+                }
+    
+            }
+
+        }
+        .about-services {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+            padding: 0px;
+            gap: 20px;
+            padding-top: 68px;
+
+            .services-box {
+                width: 100%;
+                height: 100%;
+                position: relative;
+                display: flex;
+                flex-direction: row;
+                align-items: flex-start;
+                padding: 20px 30px;
+                gap: 10px;
+               
+
+               
+                background: #FFFFFF;
+                box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.05);
+                border-radius: 24px;
+
+
+
+                img {
+
+                    position: relative;
+
+                }
+    
+                .text {
+                    width: 100%;
+                    height: 100%;
+                    position: relative;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    padding: 0px;
+                    gap: 5px;
+
+    
+                }
+
+            }
+
+
+           
+        }
+
+
+
+    }
 }
