--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -20,30 +20,23 @@
         justify-content: space-between;
 
         .app-video {
-
+            width: 100%;
+            height: 314px;
             position: relative;
-            left: 0%;
-            right: 0%;
-            top: 0%;
-            bottom: 0%;
-            position: relative;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            z-index: 100;
+            
+           
             background: url(../img/cover-app.svg);
             filter: drop-shadow(0px 4px 25px rgba(0, 185, 182, 0.25));
             border-radius: 24px;
+            background-position: 0 0;
             background-repeat: no-repeat;
-            background-position: center;
-            background-size: contain;
-           
-            width: 100%;
-            height: 314px;      
+            background-size: auto 100%;
 
         }
 
         .app-content-abaut {
-            padding-top: 14px;
+           
             padding-left: 50px ;
             width: 100%;
             height: 100%;
@@ -65,7 +58,7 @@
                     display: flex;
                     flex-direction: column;
                     align-items: flex-start;
-                    padding: 0px;
+                   
                     gap: 5px;
                 }
                 .app-logo {
