--- a/src/sass/help.scss
+++ b/src/sass/help.scss
@@ -1,31 +1,64 @@
 .help {
     position: relative;
     margin-top: 188px;
-    position: relative;
+
     z-index: 1;
     
     background-image: url(../img/decor-1.svg);
     background-repeat: no-repeat;
-    background-position: right center;
-    background-size: contain;
+    background-position: 100% 50%;
+    background-size: auto 100%;
     width: 100%;
     height: 100%;
+
+    .help-content {
+
+        position: relative;
+        z-index: 1;
+        
+        background-image: url(../img/img-help.svg);
+        background-repeat: no-repeat;
+        background-position: right center;
+        background-size: contain;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+
+        h2 {
+            padding-top: 30px;
+        }
+
+        .help-list {
+            padding: 40px 0 56px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 15px;
+
+            p {
+                font-family: 'Inter';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 140%;
+                color: #333333;
+            }
+
+            .list {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                padding: 0px;
+                gap: 10px;
+
+        
+
+            }
+        }
+
+    }
   
-}
-.help-content {
-    position: relative;
-    z-index: 1;
-    
-    background-image: url(../img/img-help.svg);
-    background-repeat: no-repeat;
-    background-position: right center;
-    background-size: contain;
-    width: 100%;
-    height: 100%;
-   
-    position:  relative;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
 }
