--- a/src/sass/how-work.scss
+++ b/src/sass/how-work.scss
@@ -1,3 +1,69 @@
 .how-work {
+    position: relative;
     margin-top: 100px;
+
+    .how-work-content {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        button {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding: 12px 30px 14px;
+            gap: 10px;
+            background: #F9FDFF;
+            border: 1px solid #00B9B6;
+            box-shadow: 0px 15px 30px rgba(220, 232, 243, 0.25);
+            border-radius: 12px;
+
+            p {
+                font-family: 'Inter';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 18px;
+                line-height: 120%;
+                color: #00B9B6;
+            }
+        }
+
+
+        .how-work-box {
+            padding-top: 70px;
+            width: 100%;
+            height: 100%;
+            position: relative;
+            display: grid;
+            grid-template-columns: 1fr auto 1fr;
+       
+            grid-template-areas: 
+                "box-text box-img box-text"  
+                "box-text box-img box-text";  
+
+
+            .box-text {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 0px;
+                gap: 10px;
+            
+                grid-area: box-text;
+
+            }
+
+            .box-img {
+                
+                grid-area: box-img;
+
+            }
+
+        }
+    }
 }
