--- a/src/sass/index-css.scss
+++ b/src/sass/index-css.scss
@@ -5,6 +5,13 @@
 @import url(./help.scss);
 @import url(./advantage.scss);
 @import url(./steps.scss);
+@import url(./about.scss);
+@import url(./how-work.scss);
+@import url(./reviews.scss);
+@import url(./reviews.scss);
+@import url(./seo.scss);
+@import url(./footer.scss);
+
 
 
 
