--- a/src/sass/reviews.scss
+++ b/src/sass/reviews.scss
@@ -1,3 +1,74 @@
 .reviews {
+    width: 100%;
+    height: 100%;
+    position: relative;
     margin: 100px;
+
+    .reviews-content {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+
+        .slider-box {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+           
+            gap: 20px;
+
+            .slider {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: flex-start;
+                padding: 30px;
+                gap: 10px;
+                width: 100%;
+                height: 100%;
+                position: relative;
+              
+                background: #FFFFFF;
+                box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.05);
+                border-radius: 24px;
+
+                .slider-text {
+                    width: 100%;
+                    height: 100%;
+                    position: relative;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                   
+                    gap: 10px;
+                    
+                    .text-name {
+                        width: 100%;
+                        height: 100%;
+                        position: relative;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        align-items: flex-start;
+                      
+
+                       
+                    }
+
+                }
+
+
+               
+            }
+
+        }
+
+    }
 }
