--- a/src/sass/speakers.scss
+++ b/src/sass/speakers.scss
@@ -1,8 +1,10 @@
 .speakers {
+    width:  100%;
+    height: 100%;
     position: relative;
     margin-top: 140px;
-   
 }
+
 .speakers-content{
     width:  100%;
     height: 100%;
@@ -10,44 +12,68 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-
 }
 
-
-.tag {
+.tag { 
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: center;
     padding: 10px 30px;
     gap: 5px;
-
   
     background: #FFFFFF;
     box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.05);
     border-radius: 12px;
-    margin: 15px 15px 0;
+    margin: 15px 15px 0 0;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 120%;
+    text-align: center;
+    color: #333333;
     
+    &:hover {
+        color: #00B9B6;
+    }   
+
+    &:last-child {
+        background: linear-gradient(225deg, #00B9B6 0%, #00CDAC 100%);
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 120%;
+        text-align: center;
+        color: #FFFFFF;
+        margin: 15px 0 0;
+    }
 }
+
 .tags {
+    width:  100%;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     align-content: center;
     justify-content: center;
     margin-top: 40px;
-    
-    
+  
 }
+
 .speakers-slider {
+    width:  100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 0px;
     gap: 20px;
     margin-top: 35px;
 }
-.piple {
+
+.piple { 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -61,15 +87,48 @@
     border-radius: 12px;
     order: 0;
     flex-grow: 1;
+
+    p {
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 120%;
+        color: #333333;
+    }
+
+    .piple-futer{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 12px;
+
+        .stars {
+            width:  100%;
+            height: 100%;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 5px;
+
+            img {
+                width: 14px;
+                height: 14px;
+            }
+
+        }
+    }
 }
 
 .dots-slide {
     width: 100%;
     height: 100%;
     margin-top: 40px;
-
     position: relative;
-   
+    gap: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -77,9 +136,12 @@
     .dot {
         width: 20px;
         height: 6px;
-        
         background-color: rgba(0, 185, 182, 0.25);
         border-radius: 6px;
-        
+
+        &:hover {
+            width: 30px;  
+            background-color: #00B9B6;
+        }
     }
 }
