--- a/src/sass/steps.scss
+++ b/src/sass/steps.scss
@@ -1,4 +1,7 @@
 .steps {
+    position: relative;
+    width: 100%;
+    height: 100%;
     margin-top: 100px;
 }
 .steps-content {
@@ -11,5 +14,46 @@
     background-repeat: no-repeat;
     background-position: right center;
     background-size: contain;
+   
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 5px;
+
+    .steps-text {
+        position: relative;
+        margin-top: 32px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 30px;
+
+        max-width: 690px;
+        width: 100%;
+        height: 100%;
+
+        .text {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            z-index: 4;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            margin: 20px 0 20px 50px;
+            gap: 5px;
+            
+            img {
+                position: absolute;
+                top: -10px;
+                left: -50px;
+            }
+            
+        }
+
+    }
+
 
 }
