--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -1,3 +1,146 @@
 footer {
+    position: relative;
     margin-top: 156px;
+    background: #FFFFFF;
+
+
+    .footer-content {
+        margin: 70px 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+ 
+        justify-content: space-between;
+
+        .menu-content {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+
+            .menu {
+                margin-top: 40px;
+                flex-wrap: wrap;
+                max-width: 396px;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                flex-direction: row;
+                align-items: flex-start;
+                nav {
+                    
+                
+                    gap: 30px;
+                
+    
+                    ul {
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        flex-direction: row;
+                        
+                        align-items: center;
+                        row-gap: 20px;
+                        column-gap: 30px;
+
+                        flex-wrap: wrap;
+              
+    
+                        li {
+                            list-style: none;
+
+                            a {
+                                font-family: 'Inter';
+                                font-style: normal;
+                                font-weight: 500;
+                                font-size: 18px;
+                                line-height: 120%;
+                                color: #333333;
+                                text-decoration: none;
+
+                                &:hover{
+                                    color: #00B9B6;
+                                                
+                                }
+
+
+
+                                    
+                                   
+                                
+                            }
+                           
+                        }  
+                        
+                    } 
+                }
+
+            }
+
+            
+
+        }
+
+        .socials-content {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+
+
+            .socials {
+                display: flex;
+                flex-direction: row;
+                align-items: flex-start;
+                padding: 0px;
+                gap: 20px;
+
+
+            }
+
+            .contacts-box {
+
+                margin-top: 36px;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 0px;
+                gap: 20px;
+
+                p {
+                    font-family: 'Inter';
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 18px;
+                    line-height: 120%;
+                    color: #333333;
+                }
+
+                .contact {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    padding: 0px;
+                    gap: 10px;
+
+
+
+                }
+
+            }
+
+
+
+        }
+    }
+
+
+
+
+           
 }
