--- a/src/sass/reviews.scss
+++ b/src/sass/reviews.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     position: relative;
-    margin: 100px;
+    margin-top: 100px;
 
     .reviews-content {
         width: 100%;
@@ -11,7 +11,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
 
 
         .slider-box {
@@ -23,6 +23,7 @@
             align-items: flex-start;
            
             gap: 20px;
+            margin-top: 50px;
 
             .slider {
                 display: flex;
@@ -59,7 +60,7 @@
                         align-items: flex-start;
                       
 
-                       
+                        
                     }
 
                 }
