--- a/src/sass/seo.scss
+++ b/src/sass/seo.scss
@@ -1,3 +1,62 @@
 .seo {
-    margin: 100px;
+    margin-top: 100px;
+
+    .seo-content {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+
+
+        .seo-text-box {
+           
+            
+            margin-top: 30px;
+
+            column-width: 48%;
+            column-count: 2;
+            column-gap: 4%;
+            
+            gap: 30px;
+
+        
+
+
+            .seo-text {
+                position: relative;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 0px;
+                gap: 10px;
+
+                ul {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    padding: 0px;
+                    gap: 5px;
+
+                    li {
+                        font-family: 'Inter';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 14px;
+                        line-height: 140%;
+                        color: #333333;
+
+                    }
+
+                }
+
+            }
+
+        }
+
+
+
+    }
 }
