--- a/src/sass/index-css.scss
+++ b/src/sass/index-css.scss
@@ -169,7 +169,8 @@ button {
         font-style: normal;
         font-weight: 600;
         font-size: 18px;
-        line-height: 120%;#FFFFFF;
+        line-height: 120%;
+        color:  #FFFFFF;
        
 
         
